# catan

./: Cargo.toml  Dockerfile  _dev-run.sh  _dev_run_ui.sh  _test.sh  gramm.ipynb  test.sh
.jeager/: docker-compose.yaml
.otel/: docker-compose.yaml
.otel/collector/: otel-collector-config.yaml
.otel/prometheus/: prometheus.yaml
.storage/: 002_fill_board_1.jsonl  002_fill_board_2.jsonl  2024-01-13T19:35:37.962Z.jsonl  2024-01-14T13:00:19.679Z.jsonl  new_game.jsonl
.telemetry/: docker-compose.yaml
api/: Cargo.toml
api/src/: error.rs  lib.rs
api/src/routes/: create.rs  games.rs  mod.rs  state.rs
api/src/routes/commen_models/: building.rs  mod.rs  port.rs  tile.rs
api/src/routes/designer/: create.rs  fill.rs  mod.rs
api/tests/: api_create_test.rs  api_game_state_test.rs
app/: Cargo.toml
app/interface/: README.md  package-lock.json  package.json
app/interface/src/: styles.scss
app/interface/src/app/: app.component.html  app.component.ts  app.routes.ts
app/interface/src/app/components/board/: board.component.html  board.component.scss  board.component.ts
app/interface/src/app/components/board-desginer/: board-desginer.component.html  board-desginer.component.scss  board-desginer.component.ts
app/interface/src/app/components/board/building/: building.component.html  building.component.ts
app/interface/src/app/components/board/port/: port.component.ts
app/interface/src/app/components/board/street/: street.component.html  street.component.ts
app/interface/src/app/components/board/tile/: tile.component.html  tile.component.ts
app/interface/src/app/components/port-designer/: port-designer.component.html
app/interface/src/app/pages/design-new-game/: design-new-game.component.html  design-new-game.component.scss  design-new-game.component.ts
app/interface/src/app/pages/init-new-game/: init-new-game.component.html  init-new-game.component.ts
app/interface/src/app/service/: board.service.ts  config.service.ts  street.service.ts  tile.service.ts
app/src/: error.rs  main.rs  model.rs
app/src/api/: init.rs  mod.rs  state.rs
app/src/api/model/: game.rs  mod.rs
app/src/web/: mod.rs  routes_login.rs  routes_ticket.rs
app/tests/: integration_test.rs  quick_dev.rs
catan_core/: Cargo.toml
catan_core/src/: lib.rs
catan_core/src/eventque/: mod.rs  start.rs
catan_core/src/game/board/: building.rs  mod.rs  ports.rs  street.rs
catan_core/tests/: create_game_test.rs  fill_board_test.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/_board/: building.rs  field.rs  mod.rs  street.rs  tiles.rs
core/src/board/: field.rs  mod.rs  street.rs  tiles.rs
core/src/eventque/: event.rs  mod.rs  start.rs
core/src/game/: mod.rs
core/src/game/board/: building.rs  mod.rs  street.rs  tiles.rs
core/tests/: create_game_test.rs  fill_board_test.rs
game/: Cargo.toml
game/src/: lib.rs
game/src/eventque/: event.rs  mod.rs  start.rs
game/src/game/: mod.rs
game/src/game/board/: building.rs  mod.rs  ports.rs  street.rs  tiles.rs
game/tests/: create_game_test.rs  fill_board_test.rs
interface/: package-lock.json  package.json
interface/src/: index.html
interface/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
interface/src/app/components/board/: board.component.html  board.component.ts
interface/src/app/components/board-desginer/: board-desginer.component.html  board-desginer.component.scss  board-desginer.component.spec.ts  board-desginer.component.ts
interface/src/app/components/board/building/: building.component.scss  building.component.ts
interface/src/app/components/board/port/: port.component.html  port.component.scss
interface/src/app/components/board/street/: street.component.html  street.component.scss  street.component.ts
interface/src/app/components/board/tile/: tile.component.scss  tile.component.ts
interface/src/app/components/player-select/: player-select.component.html  player-select.component.scss  player-select.component.ts
interface/src/app/components/port-designer/: port-designer.component.scss  port-designer.component.spec.ts  port-designer.component.ts
interface/src/app/pages/design-new-game/: design-new-game.component.scss  design-new-game.component.spec.ts  design-new-game.component.ts
interface/src/app/pages/init-new-game/: init-new-game.component.html  init-new-game.component.scss  init-new-game.component.spec.ts  init-new-game.component.ts
interface/src/app/pages/join/: join.component.html  join.component.ts
interface/src/app/pages/landingpage/: landingpage.component.html  landingpage.component.scss  landingpage.component.ts
interface/src/app/service/: ports.service.ts
interface/src/app/service/server/: create-game.service.ts  join-game.service.ts
interface/src/app/service/ui/: building.service.ts  ports.service.ts  street.service.ts  tile.service.ts
