
[workspace]
resolver = "2"
members = [
    "app",
    "catan_core",
    "database"
]


[package]
name = "catan" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Jan <jan99braunsdorff@web.de>"]
edition = "2021"


[[bin]]
name = "app"
path = "app/src/main.rs"


[dependencies]
axum = { version = "0.7.2", features = ["http2"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tower-http = { version = "0.5.0", features = ["fs"] }
tower-cookies = "0.10.0"
log = "0.4"
catan_core ={ path = "./catan_core"}


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
anyhow = "1"
http-body-util = "0.1.0"