
[workspace]
resolver = "2"
members = [
    "app",
    "api",
    "game",
    "database"
]


[package]
name = "catan" # the name of the package
version = "0.1.0"    # the current version, obeying semver
authors = ["Jan <jan99braunsdorff@web.de>"]
edition = "2021"


[[bin]]
name = "app"
path = "app/src/main.rs"


[dependencies]
axum = { version = "0.7.2", features = ["http2"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
tower-cookies = "0.10.0"
log = "0.4"
game ={ path = "./game"}
api = { path = "./api"}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18" }
chrono = "0.4.31"


opentelemetry_sdk = {version = "0.21.2", features = ["metrics", "rt-tokio", "trace"]}
opentelemetry-stdout = {version = "0.2.0", features = ["metrics", "trace"]}
opentelemetry = {version = "0.21.0", features = ["trace"]}
tracing-opentelemetry = "0.22.0"
opentelemetry-otlp = {version = "0.14.0", features = ["metrics", "reqwest", "tonic", "trace", "logs", "http-proto", "reqwest-client"]}
opentelemetry-prometheus = "0.14.1"
prometheus = {version = "0.13.3", features = ["reqwest"]}
opentelemetry-semantic-conventions = "0.13.0"



[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
anyhow = "1"
http-body-util = "0.1.0"
mime = "0.3"
