[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "tracing", "macros"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
game = {path = "../game"}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

chrono = "0.4.31"
opentelemetry = {version = "0.21.0", features = ["trace"]}
opentelemetry-http = {version = "0.10.0", features = ["hyper", "tokio", "reqwest"]}


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
anyhow = "1"
http-body-util = "0.1.0"
mime = "0.3"
