[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["http2"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
catan_core = {path = "../catan_core"}



[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
anyhow = "1"
http-body-util = "0.1.0"