[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["http2"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = {version = "1.34.0", features = ["full"]}
tower-cookies = "0.10.0"
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
game = {path = "../game"}
api ={ path = "../api"}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.18", features = ["json", "env-filter", "fmt"] }

opentelemetry_sdk = {version = "0.21.2", features = ["metrics", "rt-tokio", "trace"]}
opentelemetry-stdout = {version = "0.2.0", features = ["metrics", "trace"]}
opentelemetry = {version = "0.21.0", features = ["trace"]}
tracing-opentelemetry = "0.22.0"
opentelemetry-otlp = {version = "0.14.0", features = ["metrics", "reqwest", "tonic", "trace", "logs", "http-proto", "reqwest-client"]}
opentelemetry-prometheus = "0.14.1"
prometheus = {version = "0.13.3", features = ["reqwest"]}
opentelemetry-semantic-conventions = "0.13.0"
rand = "0.8"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
anyhow = "1"
http-body-util = "0.1.0"
mime = "0.3"
